# Ferrokv

./: .gitignore  Cargo.toml  ferrokv.config.toml  refferences  tradeoffs.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/persist/: Cargo.toml
crates/proto/: Cargo.toml
crates/proto/src/: error.rs  lib.rs  parser.rs  serializer.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: command.rs  connection.rs  dispatcher.rs  error.rs  lib.rs  listener.rs
crates/storage/: Cargo.toml
crates/storage/src/: entry.rs  error.rs  eviction.rs  lib.rs  memory.rs  shard.rs  sharded_store.rs  store.rs  store_stats.rs  timer_wheel.rs
src/: main.rs
