[package]
name = "kv_store"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio = {version = "1.50.0" , features = ["full"]}
anyhow = "1.0.102"
bytes = "1.11.1"
thiserror = "2.0.18"

[dependencies]
server = { path = "crates/server" }
config = { path = "crates/config" }
storage = {path = "crates/storage"}
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true